@@ -1,6 +1,10 @@
 Changelog for Miosix np embedded OS
 
 v1.59
+- Improved boot speed by replacing for loops to initialize .data, .bss and
+  to initialize the stack of threads with memset/memcpy.
+- Improved getMiosixVersion(), new format contains more information, including
+  board name, build date and compiler version.
 - The files binutils-2.21.tar.bz2 and gdb-7.0.tar.bz2 no longer exist on the
   ftp.gnu.org and mirrors.kernel.org, and this broke the compiler installation
   script. Fixed by downloading binutils-2.21.1 and gdb-7.0.1a.
